# statistical_data_processing

./: README.md  pyproject.toml
lec01/: lab_01_02_03_04.py
lec05/: data.txt  lab09.py
lec06/: lab10.ipynb
semi_test/: semi_test.ipynb
